# snowball-notes

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  snowball-notes-final.md
demo/fixtures/llm-observe/: README.md  config.yaml
demo/fixtures/llm-observe-advanced/: README.md  config.yaml  seed_workspace.py
demo/fixtures/llm-observe-review/: README.md  config.yaml  seed_workspace.py
demo/fixtures/transcripts/: 01-agent-runtime-note.jsonl  02-archive-checkin.jsonl
eval/: README.md
eval/fixtures/: sample_cases.json
src/snowball_notes/: __init__.py  cli.py  config.py  demo.py  models.py  note_cleanup.py  utils.py
src/snowball_notes/agent/: adapter.py  commit.py  guardrails.py  memory.py  orchestrator.py  replay.py  runtime.py  state.py  state_machine.py  tools.py  trace.py
src/snowball_notes/calibrate/: __init__.py  confidence_feedback.py
src/snowball_notes/embedding/: __init__.py  check.py  dashscope.py  local.py  provider.py  sqlite_blob.py  sqlite_vec.py  vector_store.py  voyage.py
src/snowball_notes/eval/: __init__.py  report.py  runner.py
src/snowball_notes/intake/: __init__.py  confidence.py  receiver.py  transcript_parser.py  transcript_poll.py
tests/: test_adapter.py  test_calibration.py  test_committer.py  test_confidence.py  test_config.py  test_demo.py  test_embedding.py  test_eval.py  test_guardrails.py  test_link_notes.py  test_logging.py  test_note_cleanup.py  test_observability.py  test_parser.py  test_react_loop.py  test_replay.py  test_review_server.py  test_runtime.py  test_state_machine.py
(+27 files in other folders)
