[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snowball-notes"
version = "0.1.0"
description = "Agent-first Codex transcript to Obsidian knowledge pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "cyber7fish" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
review = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.29",
]

[project.scripts]
snowball-worker = "snowball_notes.cli:main"
snowball-review = "snowball_notes.cli:main"
snowball-status = "snowball_notes.cli:main"
snowball-eval = "snowball_notes.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
